--- a/front/src/app/components/welcome/welcome.component.html
+++ b/front/src/app/components/welcome/welcome.component.html
@@ -6,36 +6,36 @@
 <div class="container mt-2 content-animate">
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center h-100">
+            <div class="card shadow text-center h-100">
                 <div class="card-header">
                     Mi Perfil
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Actualizar mis datos personales</h5>
-                    <a routerLink="/user/MyInformation" class="btn btn-primary">Ver más</a>
+                    <a routerLink="/user/information" class="btn btn-primary">Ver más</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center h-100">
+            <div class="card shadow text-center h-100">
                 <div class="card-header">
                     Servicios de ahorro
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de ahorro</h5>
-                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/user/savings">Ver más</a>
                 </div>
 
             </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
-            <div class="card text-center h-100">
+            <div class="card shadow text-center h-100">
                 <div class="card-header">
                     Servicios de credito
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Conoce los servicios de credito</h5>
-                    <a class="btn btn-primary" routerLink="/services/savings">Ver más</a>
+                    <a class="btn btn-primary" routerLink="/user/credits">Ver más</a>
                 </div>
             </div>
         </div>
