corporate principles started

--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center border-top">
+<div class="container text-center border-top mt-4">
         <footer class="mt-5">
                 <div class="row">
                         <div class="col-12 col-md">
