--- a/front/src/app/components/about/about.component.css
+++ b/front/src/app/components/about/about.component.css
@@ -23,3 +23,21 @@
     align-items: center;
     justify-content: center;
   }
+
+
+.p-carousel .p-carousel-item {
+    padding: 0.5rem; 
+  }
+  
+  .p-card {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease-in-out;
+  }
+  
+  .p-card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
