--- a/front/src/app/components/about/about.component.html
+++ b/front/src/app/components/about/about.component.html
@@ -75,32 +75,26 @@
     </div>
     <div class="card shadow">
         <p-carousel 
-            [value]="principles" 
-            [numVisible]="3" 
-            [numScroll]="3" 
-            [circular]="true" 
-            [responsiveOptions]="responsiveOptions" 
-            autoplayInterval="3000">
-            <ng-template let-principles pTemplate="item">
-                    <p-card class="border-1 surface-border border-round p-3">
-                        <div class="mb-3">
-                            <div class="relative mx-auto">
-                                <p-tag 
-                                    class="absolute" 
-                                    [ngStyle]="{ 'left.px': 5, 'top.px': 5 }" />
-                            </div>
-                        </div>
-                        <div class="title-color text-center h5 mb-3 font-medium">
-                            {{ principles.name }}
-                        </div>
-                        <div class="flex justify-content-between align-items-center text-aling-center">
-                        <div class="mt-0 font-semibold text-xl text-center">
-                            {{ principles.description }}
-                        </div>
-                        </div>
-                    </p-card>
-                </ng-template>
+          [value]="principles" 
+          [numVisible]="numVisible" 
+          [numScroll]="numScroll" 
+          [circular]="true" 
+          [responsiveOptions]="responsiveOptions" 
+          autoplayInterval="3000">
+          <ng-template let-principles pTemplate="item">
+            <p-card class="border-1 surface-border border-round p-3">
+              <div class="mb-3">
+                <div class="relative mx-auto">
+                  <p-tag class="absolute" [ngStyle]="{ 'left.px': 5, 'top.px': 5 }"></p-tag>
+                </div>
+              </div>
+              <div class="title-color text-center h5 mb-3 font-medium">{{ principles.name }}</div>
+              <div class="flex justify-content-between align-items-center text-align-center card-text mt-0 font-semibold text-xl text-center">
+                {{ principles.description }}
+              </div>
+            </p-card>
+          </ng-template>
         </p-carousel>
-    </div>
+      </div>
 
 </div>
