--- a/front/src/app/components/about/about.component.css
+++ b/front/src/app/components/about/about.component.css
@@ -7,37 +7,92 @@
   margin-right: 150px;
   text-align: center;
 }
-  
-  @media (max-width: 991.98px) {
-    .small-text {
-      margin-left: 15px;
-      margin-right: 15px;
-    }
-  }
-  .p-galleria .p-galleria-item-container button{
-    z-index: 2;
-  }
-  
-  .p-galleria .p-galleria-caption h4{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
 
+@media (max-width: 991.98px) {
+  .small-text {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+.p-galleria .p-galleria-item-container button {
+  z-index: 2;
+}
+
+.p-galleria .p-galleria-caption h4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .p-carousel .p-carousel-item {
-    padding: 0.5rem; 
+  padding: 0.5rem;
+}
+
+.p-card {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.p-card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-text {
+  max-height: 10rem;
+  overflow: auto;
+}
+
+.card-text::-webkit-scrollbar {
+    width: 8px;
   }
-  
-  .p-card {
-    height: 90%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease-in-out;
-  }
-  
-  .p-card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  }
+
+.p-carousel .p-carousel-button-left,
+.p-carousel .p-carousel-button-right {
+  background-color: #00823d;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.p-carousel .p-carousel-button-left:hover,
+.p-carousel .p-carousel-button-right:hover {
+  background-color: #005a2c;
+  transform: scale(1.1);
+}
+
+.p-carousel .p-carousel-button-left:focus,
+.p-carousel .p-carousel-button-right:focus {
+  outline: none;
+}
+
+.p-carousel-content {
+  padding: 0.5rem;
+  border-radius: 10px;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.p-carousel-prev,
+.p-carousel-next {
+  font-size: 1.5rem;
+  color: #00823d;
+}
+
+.p-carousel-prev:hover,
+.p-carousel-next:hover {
+  color: #005a2c;
+}
+
+.p-carousel-prev:focus,
+.p-carousel-next:focus {
+  outline: none;
+}
