better about us

--- a/front/src/app/components/about/about.component.html
+++ b/front/src/app/components/about/about.component.html
@@ -70,6 +70,8 @@
         </p-galleria>
     </div>
 
+    <!-- PRINCIPIOS CORPORATIVOS -->
+
     <div class="text-center content-animate">
         <h1 class="title-color mt-5">Nuestros principios corporativos</h1>
     </div>
@@ -92,5 +94,52 @@
             </ng-template>
         </p-carousel>
     </div>
+
+    <!-- Objetivos estrategicos y grupos de interes -->
+    <div class="row">
+        <div class="col-lg-6 mt-4">
+            <div class="card shadow">
+                <div class="card-header text-center h3">
+                    Objetivos Estrategicos
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush card-text text-start">
+                        <li class="list-group-item"><i class="bi bi-emoji-smile-fill"></i> Implementar programas de bienestar social</li>
+                        <li class="list-group-item"><i class="bi bi-cash-stack"></i> Mantener la solidez financiera del Fondo</li>
+                        <li class="list-group-item"><i class="bi bi-graph-down-arrow"></i> Mantener entre 0 y 3% la Cartera Morosa Según los indicadores financieros establecidos por el Superintendencia de Economía Solidaria</li>
+                        <li class="list-group-item"><i class="bi bi-graph-up-arrow"></i> Aumentar la base social</li>
+                        <li class="list-group-item"><i class="bi bi-buildings-fill"></i> Fomentar el ahorro</li>
+                        <li class="list-group-item"><i class="bi bi-megaphone-fill"></i> Fortalecer los medios de comunicación</li>
+                        <li class="list-group-item"><i class="bi bi-person-workspace"></i> Incrementar el uso de los servicios</li>
+                        <li class="list-group-item"><i class="bi bi-people-fill"></i> Mejorar el nivel de competencia y desempeño de empleados</li>
+                        <li class="list-group-item"><i class="bi bi-exclamation-diamond-fill"></i> Fortalecer el Sistema de Gestión del Riesgo</li>
+                        <li class="list-group-item"><i class="bi bi-building-fill-gear"></i> Fortalecer la cultura organizacional</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 mt-4">
+            <div class="card shadow">
+                <div class="card-header text-center h3">
+                    Grupos De Interés
+                </div>
+                <div class="card-body">
+                    FEMSEAPTO debe mantener relaciones armónicas, constructivas y transparentes con los siguientes públicos:
+                    <ul class="list-group list-group-flush card-text text-start">
+                        <li class="list-group-item"><i class="bi bi-person-arms-up"></i> Asociados</li>
+                        <li class="list-group-item"><i class="bi bi-briefcase-fill"></i> Empleados</li>
+                        <li class="list-group-item"><i class="bi bi-box-seam-fill"></i> Proveedores</li>
+                        <li class="list-group-item"><i class="bi bi-building-fill-check"></i> Empresas generadoras de vinculo</li>
+                        <li class="list-group-item"><i class="bi bi-people-fill"></i> Comunidad en general</li>
+                        <li class="list-group-item"><i class="bi bi-buildings-fill"></i> Estado</li>
+                        <li class="list-group-item"><i class="bi bi-shop"></i> Competidores</li>
+                        <li class="list-group-item"><i class="bi bi-sign-stop-fill"></i> Organismos de control</li>
+                        <li class="list-group-item"><i class="bi bi-credit-card-2-back-fill"></i> Acreedores</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </div>
