--- a/front/src/app/components/about/about.component.css
+++ b/front/src/app/components/about/about.component.css
@@ -1,5 +1,11 @@
+/* Estilos generales */
 .title-color {
   color: #00823d;
+}
+
+.card-header {
+  background-color: #00823d;
+  color: white;
 }
 
 .small-text {
@@ -14,6 +20,7 @@
     margin-right: 15px;
   }
 }
+
 .p-galleria .p-galleria-item-container button {
   z-index: 2;
 }
@@ -24,11 +31,12 @@
   justify-content: center;
 }
 
+/* Estilos específicos para el carousel */
 .p-carousel .p-carousel-item {
   padding: 0.5rem;
 }
 
-.p-card {
+.p-carousel .p-card {
   height: 90%;
   display: flex;
   flex-direction: column;
@@ -37,23 +45,23 @@
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.p-card:hover {
+.p-carousel .p-card:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.card-content {
+.p-carousel .card-content {
   display: flex;
   flex-direction: column;
 }
 
-.card-text {
+.p-carousel .card-text {
   max-height: 10rem;
   overflow: auto;
 }
 
-.card-text::-webkit-scrollbar {
-    width: 8px;
-  }
+.p-carousel .card-text::-webkit-scrollbar {
+  width: 8px;
+}
 
 .p-carousel .p-carousel-button-left,
 .p-carousel .p-carousel-button-right {
@@ -95,4 +103,25 @@
 .p-carousel-prev:focus,
 .p-carousel-next:focus {
   outline: none;
+}
+
+/* Estilos para las otras cards */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+.card.shadow {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.card.shadow .card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
