Fix responsive cards in home page

--- a/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
+++ b/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-5 mb-5">
   <h2 class="text-center mb-3">¡Conoce nuestra línea de créditos!</h2>
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col-md-3">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+    <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
           <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
-          <div class="icon">
+          <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
-          </div>
+          </a>
           <div class="card-body mt-2">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -15,13 +15,13 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
           <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
-          <div class="icon">
+          <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
-          </div>
+          </a>
           <div class="card-body mt-2">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a short card.</p>
@@ -29,13 +29,13 @@
         </div>
       </a>
     </div>
-    <div class="col-md-3">
+    <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
           <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
-          <div class="icon">
+          <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
-          </div>
+          </a>
           <div class="card-body mt-2">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -43,13 +43,13 @@
         </div>
       </a>  
     </div>
-    <div class="col-md-3">
+    <div class="col">
       <a routerLink="/services/credits">
         <div class="card h-100 shadow text-center">
           <img src="../../../../../assets/ahorroExtraordinario.jpg" class="card-img-top" alt="...">
-          <div class="icon">
+          <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
-          </div>
+          </a>
           <div class="card-body mt-2">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
