--- a/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
+++ b/front/src/app/components/home/components/saving-service-home/saving-service-home.component.css
@@ -20,39 +20,61 @@ h2, .card-title {
     text-decoration: none;
 }
 
-.icon {
-    position: absolute;
-    top: 48%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    border-radius: 50%;
-    padding: 15px;
-    z-index: 1;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.card-action {
+    position: relative;
+    margin-top: -30px;
+    margin-right: 38%;
+    margin-left: 38%;
+    z-index: 2;
+    background: #fff;
+    border-radius: 100%;
+    padding: 7px;
 }
 
-.card-img-top {
-    position: relative;
-    z-index: 0;
+.card-action:hover {
+    background:  rgba(255,214,16, 1);
 }
+
+.card-action:hover i {
+    color: #00823d;
+}
+
 
 .bi {
     font-size: 2rem;
 }
 
-@media (max-width: 768px) {
-    .icon {
-        width: 50px;
-        height: 50px;
-        top: 65%;
-    }
-
-    .bi {
-        font-size: 2rem;
+@media (max-width: 575.98px) {
+    .card-action {
+        margin-right: 40%;
+        margin-left: 40%;
     }
 }
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .card-action {
+        margin-right: 38%;
+        margin-left: 38%;
+    }
+}
+
+@media (min-width: 768px) and  (max-width: 991.98px) {
+    .card-action {
+        margin-right: 36%;
+        margin-left: 36%;
+    }  
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .card-action {
+        margin-right: 36%;
+        margin-left: 36%;
+    }  
+}
+
+/*@media (min-width: 1200px) and (max-width: 1399.98px) {
+    .card-action {
+        margin-right: 30%;
+        margin-left: 30%;
+    }  
+}*/
