--- a/front/src/app/components/navbar/navbar.component.css
+++ b/front/src/app/components/navbar/navbar.component.css
@@ -4,7 +4,7 @@ nav {
   position: fixed;
   top: 0;
   z-index: 10;
-  font-family: 'inter', sans-serif;
+  /*font-family: 'inter', sans-serif;*/
 }
 
 .cel {
