change about us and footer redirect

--- a/front/src/app/components/about/about.component.html
+++ b/front/src/app/components/about/about.component.html
@@ -1,27 +1,29 @@
 <div class="container">
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5 mb-5">Nuestro equipo</h1>
+        <h1 class="title-color mt-5 mb-5">¡Sobre nosotros!</h1>
     </div>
 
-    <div class="row mb-3">
-        <div class="col-lg-6 d-flex justify-content-center align-items-center">
-            <img class="img-fluid" src="../../../assets/team.png" alt="Nuesto equipo">
-        </div>
-        <div class="col-lg-6 col-12 text-center h-100 mt-3 mt-lg-0">
-            <div class="h2 title-color">
-                ¡Conócenos!
+    <div class="card shadow text-center">
+        <div class="row align-items-center">
+            <div class="col-lg-6 d-flex justify-content-center">
+                <img class="img-fluid" src="../../../assets/team.png" alt="Nuestro equipo">
             </div>
-            <div class="p-0">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt at lectus quis
-                    hendrerit. Praesent eu nisi lorem. Suspendisse quis dolor sodales, aliquet sem eu, tincidunt
-                    enim. Mauris bibendum tellus eu purus rhoncus, sed luctus turpis pharetra. Sed et metus eget
-                    enim porttitor dictum ut at massa. Sed augue velit, feugiat luctus ornare vel, bibendum id
-                    urna. Sed posuere enim nibh, vel faucibus turpis blandit a. Nullam in purus a turpis porta
-                    ullamcorper vitae ut sapien. Duis fermentum pretium eleifend. Sed suscipit sagittis sapien
-                    in rhoncus. Nulla facilisi. Proin non purus diam.</p>
+            <div class="col-lg-6 col-12 text-center mt-3 mt-lg-0 d-flex flex-column justify-content-center">
+                <div class="h2 title-color">
+                    ¡Conócenos!
+                </div>
+                <div class="p-1">
+                    <p class="first-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt at lectus quis
+                        hendrerit. Praesent eu nisi lorem. Suspendisse quis dolor sodales, aliquet sem eu, tincidunt
+                        enim. Mauris bibendum tellus eu purus rhoncus, sed luctus turpis pharetra. Sed et metus eget
+                        enim porttitor dictum ut at massa. Sed augue velit, feugiat luctus ornare vel, bibendum id
+                        urna. Sed posuere enim nibh, vel faucibus turpis blandit a. Nullam in purus a turpis porta
+                        ullamcorper vitae ut sapien. Duis fermentum pretium eleifend. Sed suscipit sagittis sapien
+                        in rhoncus. Nulla facilisi. Proin non purus diam.</p>
+                </div>
             </div>
         </div>
-    </div>
+    </div>    
 
     <!-- MISION -->
 
