--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
         <footer class="mt-5">
                 <div class="row">
                         <div class="col-12 col-md">
-                                <a href="/"
+                                <a routerLink="/"
                                         class="d-flex justify-content-center align-items-center mb-3 link-dark text-decoration-none">
                                         <img src="../../../assets/logo_showcase.png" alt="" width="220px">
                                 </a>
@@ -21,12 +21,12 @@
                         <div class="col-12 col-md">
                                 <h5><i class="bi bi-mailbox2"></i> Contacto</h5>
                                 <ul class="nav flex-column">
-                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Móvil: +57
+                                        <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">Móvil: +57
                                                         321 403 0957 -
                                                         321 385 6420</a></li>
-                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">E-mail:
+                                        <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">E-mail:
                                                         femseapto&#64;ganagana.com.co</a></li>
-                                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">PBX: +57
+                                        <li class="nav-item mb-2"><a href="#" target="_blank" class="nav-link p-0 text-muted">PBX: +57
                                                         (8) 261 0014 -
                                                         Ext: 150</a></li>
                                 </ul>
