--- a/front/src/app/components/about/about.component.css
+++ b/front/src/app/components/about/about.component.css
@@ -14,10 +14,17 @@
   text-align: center;
 }
 
+.first-text{
+  padding-right: 30px;
+}
+
 @media (max-width: 991.98px) {
   .small-text {
     margin-left: 15px;
     margin-right: 15px;
+  }
+  .first-text{
+    padding-left: 30px;
   }
 }
 
