Change backend structure and add info home
Change usuario and personalNatural structure and add info home

--- a/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
+++ b/front/src/app/components/home/components/credit-service-home/credit-service-home.component.html
@@ -8,9 +8,9 @@
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
-          <div class="card-body mt-2">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <div class="card-body">
+            <h5 class="card-title">Crédito Vivienda</h5>
+            <p class="card-text">Ten la oportunidad de adquirir vivienda propia o realizar mejoras de tu hogar.</p>
           </div>
         </div>
       </a>
@@ -22,9 +22,9 @@
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
-          <div class="card-body mt-2">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a short card.</p>
+          <div class="card-body">
+            <h5 class="card-title">Crédito Vehículo</h5>
+            <p class="card-text">Adquiere el vehículo que siempre has deseado.</p>
           </div>
         </div>
       </a>
@@ -36,9 +36,9 @@
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
-          <div class="card-body mt-2">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <div class="card-body">
+            <h5 class="card-title">Crédito de Libre Inversión</h5>
+            <p class="card-text">Solicita fondos para cubrir tus necesidades sin tener que justificar su destino.</p>
           </div>
         </div>
       </a>  
@@ -50,9 +50,9 @@
           <a class="card-action">
             <i class="bi bi-house-heart-fill"></i>
           </a>
-          <div class="card-body mt-2">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <div class="card-body">
+            <h5 class="card-title">Crédito para Educación</h5>
+            <p class="card-text">Adelanta tus estudios superiores aportando a tu desarrollo personal y laboral.</p>
           </div>
         </div>
       </a>
