--- a/front/src/app/components/agreements/agreements.component.html
+++ b/front/src/app/components/agreements/agreements.component.html
@@ -1,1 +1,63 @@
-<h1>AQUÍ APARECERÁN LOS CONVENIOS</h1>
+<div class="container">
+    <h1 class="text-center fw-bold mt-3">Convenios</h1>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempora ducimus ab, accusantium necessitatibus
+        commodi quas maxime harum et expedita quibusdam hic consequatur maiores nisi, labore deserunt aliquam pariatur
+        similique.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos tenetur quidem, cum id beatae tempore
+        soluta optio natus voluptates saepe eius. Ipsa minus laborum, quas nisi unde molestiae ab earum.
+    </p>
+    <h2 class="fw-bold mt-3">Categorías</h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-4">
+        <div class="col">
+            <a routerLink="/services/credits">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/services/credits">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/services/credits">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/services/credits">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col">
+            <a routerLink="/services/credits">
+                <div class="card h-100 shadow text-center">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <div class="card-body pt-0">
+                        <h5 class="card-title">Crédito para Educación</h5><i class="bi bi-arrow-right-square-fill"></i>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
