change bold text in about us

--- a/front/src/app/components/about/about.component.html
+++ b/front/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5 mb-5">¡Sobre nosotros!</h1>
+        <h1 class="title-color fw-bold mt-5 mb-5">¡Sobre nosotros!</h1>
     </div>
 
     <div class="card shadow text-center">
@@ -9,9 +9,9 @@
                 <img class="img-fluid" src="../../../assets/team.png" alt="Nuestro equipo">
             </div>
             <div class="col-lg-6 col-12 text-center mt-3 mt-lg-0 d-flex flex-column justify-content-center">
-                <div class="h2 title-color">
+                <h2 class="fw-bold title-color">
                     ¡Conócenos!
-                </div>
+                </h2>
                 <div class="p-1">
                     <p class="first-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt at lectus quis
                         hendrerit. Praesent eu nisi lorem. Suspendisse quis dolor sodales, aliquet sem eu, tincidunt
@@ -28,7 +28,7 @@
     <!-- MISION -->
 
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5">Nuestra misión</h1>
+        <h1 class="title-color fw-bold mt-5">Nuestra misión</h1>
     </div>
     <div class="m-3">
         <p class="small-text">Mejorar la calidad de vida de los asociados mediante la promoción del ahorro, la
@@ -40,7 +40,7 @@
     <!-- VISION -->
 
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5">Nuestra visión</h1>
+        <h1 class="title-color fw-bold mt-5">Nuestra visión</h1>
     </div>
     <div class="m-3">
         <p class="small-text">Ser reconocido en el 2026 como la primera y mejor alternativa en la oferta de servicios
@@ -50,7 +50,7 @@
     <!-- VALORES CORPORATIVOS -->
 
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5">Nuestros valores corporativos</h1>
+        <h1 class="title-color fw-bold mt-5">Nuestros valores corporativos</h1>
     </div>
     <div class="m-3">
         <p class="small-text">Trabajar bajo los principios cooperativos y solidarios, buscando que las acciones se
@@ -75,7 +75,7 @@
     <!-- PRINCIPIOS CORPORATIVOS -->
 
     <div class="text-center content-animate">
-        <h1 class="title-color mt-5">Nuestros principios corporativos</h1>
+        <h1 class="title-color fw-bold mt-5">Nuestros principios corporativos</h1>
     </div>
     <div class="card shadow">
         <p-carousel [value]="principles" [numVisible]="numVisible" [numScroll]="numScroll" [circular]="true"
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="col-lg-6 mt-4">
             <div class="card shadow">
-                <div class="card-header text-center h3">
+                <div class="card-header fw-bold text-center h3">
                     Objetivos Estrategicos
                 </div>
                 <div class="card-body">
@@ -122,7 +122,7 @@
         </div>
         <div class="col-lg-6 mt-4">
             <div class="card shadow">
-                <div class="card-header text-center h3">
+                <div class="card-header fw-bold text-center h3">
                     Grupos De Interés
                 </div>
                 <div class="card-body">
